# libh265

./: .MODULE_LICENSE_BSD  CMakeLists.txt  README.md  atom.mk
include/h265/: h265.h  h265_bitstream.h  h265_ctx.h  h265_dump.h  h265_reader.h  h265_types.h  h265_writer.h
src/: h265.c  h265_bitstream.c  h265_ctx.c  h265_dump.c  h265_priv.h  h265_reader.c  h265_syntax.h  h265_syntax_ops.h  h265_types.c  h265_writer.c
tools/: h265_dump.c
